updated index.html and style.css

--- a/index.html
+++ b/index.html
@@ -51,12 +51,140 @@
     <div><p><img src="./images/Vector.svg" alt=""><b>100+</b></p>
         <p>Teachers</p></div>
     </section>
-<section>
+<section class="third">
     <div>
 
     </div>
     <div></div>
     <div></div>
 </section>
+<section class="fourth">
+<div>
+<img src="./images/Rectangle.png" alt="">
+</div>
+<div class="">
+<h2>
+    BetaStart is an interesting platform that will teach you about web development</h2>
+    <p>
+        Lorem ipsum dolor sit amet consectetur. Convallis sed 
+habitant arcu ultrices mattis. Diam faucibus aliquam 
+rhoncus dui. Non turpis viverra senectus pellentesque 
+gravida ut nulla et. Id nisl venenatis scelerisque est proin. 
+Proin suspendisse non sed nec.
+    </p>
+    <div class="btn-one">
+        <button>Learn More</button>
+    </div>
+</div>
+</section>
+<section class="fifth">
+<div>
+<img src="./images/Group.svg" alt="">
+<h3>Experienced instructor in the field</h3>
+<p>No need to worry. Learn with 
+    ease with our years of 
+    experienced instructors</p>
+</div>
+<div>
+<img src="./images/Group.svg" alt="">
+<h3>Lifetime access to the courses</h3>
+<p>No need to worry. Learn with 
+    ease with our years of 
+    experienced instructors</p>
+</div>
+<div>
+<img src="./images/Group.svg" alt="">
+<h3>Real world case study curriculum</h3>
+<p>No need to worry. Learn with 
+    ease with our years of 
+    experienced instructors</p>
+</div>
+</section>
+<section class="sixth">
+    <h3>Our Top Instructors</h3>
+<div class="instructor">
+<div class="inst-name">
+    <img src="./images/Rectangle 4.png" alt="" class="teacher">
+    <div>
+        <h5>Kwaku Samson</h5>
+        <p>Full Web Developer</p>
+    </div><br>
+    <p><img src="./images/material-symbols_play-circle.svg" alt=""> 45 Courses</p>
+</div>
+<div class="inst-name">
+    <img src="./images/Rectangle 5.png" alt="" class="teacher">
+    <div>
+        <h5>Adeyemo Fuhad</h5>
+        <p>Front-end Developer</p>
+    </div><br>
+    <p><img src="./images/material-symbols_play-circle.svg" alt="">38 Courses</p>
+</div>
+<div class="inst-name">
+    <img src="./images/Rectangle 6.png" alt="" class="teacher">
+    <div>
+        <h5>Uzo Chinyere</h5>
+        <p>Full Web Developer</p>
+    </div><br>
+    <p><img src="./images/material-symbols_play-circle.svg" alt="" srcset="">22 Courses</p>
+</div>
+</div><br><br>
+<div class="instructor">
+<div class="inst-name">
+    <img src="./images/Rectangle 7.png" alt="" class="teacher">
+    <div>
+        <h5>Olabisi Toyosi</h5>
+        <p>Back end Developer</p>
+    </div><br>
+    <p><img src="./images/material-symbols_play-circle.svg" alt="">33 Courses</p>
+</div>
+<div class="inst-name">
+    <img src="./images/Rectangle 8.png" alt="" class="teacher">
+    <div>
+        <h5>Jane Ruth</h5>
+        <p>Product Designer</p>
+    </div><br>
+    <p><img src="./images/material-symbols_play-circle.svg" alt="">30 Courses</p>
+</div>
+<div class="inst-name">
+    <img src="./images/Rectangle 9.png" alt="" class="teacher">
+    <div>
+        <h5>Adejumo Scott</h5>
+        <p>Back end Developer</p>
+    </div><br>
+    <p><img src="./images/material-symbols_play-circle.svg" alt="">40 Courses</p>
+</div>
+</div>
+</section>
+<footer>
+    <div>
+        <h4>Company</h4>
+        <a href="#">About</a><br>
+        <a href="">Events</a><br>
+        <a href="">Careers</a><br>
+    </div>
+    <div>
+        <h4>Resources</h4>
+        <a href="">Blog</a><br>
+        <a href="">Consultation</a><br>
+    </div>
+    <div>
+        <h4>Support</h4>
+        <a href="">Live Chat</a><br>
+        <a href="">Contact</a><br>
+        <a href="">Help</a><br>
+    </div>
+    <div>
+        <h4>Follow Us</h4>
+        <a href="">Facebook</a><br>
+        <a href="">Twitter</a><br>
+        <a href="">Youtube</a><br>
+    </div>
+    <div>
+        <h4>More</h4>
+        <a href="">Privacy</a><br>
+        <a href="">About</a><br>
+        <a href="">Terms</a><br>
+    </div>
+</footer>
 </body>
 </html>
