--- a/index.html
+++ b/index.html
@@ -52,11 +52,9 @@
         <p>Teachers</p></div>
     </section>
 <section class="third">
-    <div>
-
-    </div>
-    <div></div>
-    <div></div>
+   <div><a href=""><img src="./images/Frame 41.png" alt=""></a></div><br>
+   <div><a href=""><img src="./images/Frame 42.png" alt=""></a></div><br>
+   <div><a href=""><img src="./images/Frame 43.png" alt=""></a></div><br>
 </section>
 <section class="fourth">
 <div>
@@ -154,6 +152,31 @@ Proin suspendisse non sed nec.
     <p><img src="./images/material-symbols_play-circle.svg" alt="">40 Courses</p>
 </div>
 </div>
+</section>
+<section class="seventh">
+<div class="comment">
+<img src="./images/mingcute_quote-left-fill.svg" alt="" class="seventh-quote">
+<h3>BetaStart provides me with high 
+quality courses to improve my web development skills</h3>
+<h4>Babajide John</h4>
+<p>Web Developer</p>
+</div>
+<div>
+    <img src="./images/Ellipse 12.png" alt="" class="seventh-name">
+</div>
+</section>
+<section class="eight">
+    <div class="subscribe">
+        <div>
+            <h4>Enter your email and get our latest news</h4>
+        </div>
+        <div>
+            <form action="">
+                <input type="email" name="email" id="email" placeholder="Enter your email...">
+                <button type="submit">Subscribe</button>
+            </form>
+        </div>
+    </div>
 </section>
 <footer>
     <div>
